[package]
name = "sentry"
version = "0.1.9"
authors = ["Alexis Agahi <aagahi@prefetch.com>"]
license = "MIT/Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/aagahi/rust-sentry"
homepage = "https://github.com/aagahi/rust-sentry"
documentation = "https://github.com/aagahi/rust-sentry"
description = """
Sentry (getsentry.com) client for rust ;)
"""


[dependencies]
backtrace = { git = "https://github.com/alexcrichton/backtrace-rs.git", rev = "aa8891341bd1744e6431be81d0c26a655f88624e" }
hyper = "0.9"
time = "0.1"
chrono = "0.2"
